# djangoProject__veprintcev_bronislav__main

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  compose.override.dev.yaml  compose.yaml  manage.py  pyproject.toml  requirements.txt
car_details/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
car_details/management/commands/: import_car_details.py
car_details/migrations/: 0001_initial.py  0002_category_subcategory_cardetail_subcategory.py  0003_cardetail_image_cardetail_url.py
car_details/static/car_details/: styles.css
djangoProject__veprintcev_bronislav__main/: asgi.py  settings.py  urls.py  wsgi.py
docker/app/: start.sh
templates/: home.html
templates/car_details/: compare_prices.html
